# Asteria

./: .gitignore
ASN.MC/: ASN.sln
ASN.MC/ASN.MC.Backend/: ASN.MC.Backend.csproj  ASN.MC.Backend.http  Program.cs
ASN.MC/ASN.MC.Backend/Controllers/: CommandController.cs  LogController.cs  StatusController.cs
ASN.MC/ASN.MC.Backend/Data/Models/Requests/: CommandRequest.cs
ASN.MC/ASN.MC.Backend/Properties/: launchSettings.json
ASN.MC/ASN.MC.Backend/Services/: CommandService.cs  ICommandService.cs
ASN.MC/ASN.MC.UI/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
ASN.MC/ASN.MC.UI/Models/Core/: SidebarItem.cs
ASN.MC/ASN.MC.UI/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ASN.MC/ASN.MC.UI/Views/: MainWindow.axaml  MainWindow.axaml.cs
ASN.Station/: CMakeLists.txt  Cargo.toml  main.cpp
ASN.Station/Argus/: CMakeLists.txt  Dummy.cpp
ASN.Station/Common/: CMakeLists.txt  Logger.cpp  Logger.hpp
ASN.Station/Common/include/Common/: Logger.hpp  ToString.hpp
ASN.Station/Common/src/: Logger.cpp
ASN.Station/Communication/: CMakeLists.txt
ASN.Station/Core/: CMakeLists.txt
ASN.Station/Core/include/Core/: Task.hpp
ASN.Station/Database/: CMakeLists.txt
ASN.Station/asn-argus/: Cargo.toml
ASN.Station/asn-comm/: Cargo.toml
ASN.Station/asn-comm/src/: lib.rs
ASN.Station/asn-core/: Cargo.toml  build.rs
ASN.Station/asn-core/src/: handler.rs  main.rs  queue.rs  server.rs  task_manager.rs  telemetry.rs  utils.rs
ASN.Station/asn-db/: Cargo.toml
